fix overflow

--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -9,5 +9,6 @@
     &__editor {
         display: flex;
         height: 100%;
+        overflow-y: scroll;
     }
 }
